# minor-project-1

./: .env  main.py  pyproject.toml
medical rag/: datacleaning.ipynb  diseasesymptomstreatment2.ipynb  diseasesymptomtreatment1.ipynb  rag.py
medical rag/disease symptom rag/: __init__.py  main.py  utils.py
medical rag/neo4j_data/: disease_symptom_relationships.csv  disease_treatment_relationships.csv  diseases.csv  import_script.cypher  symptoms.csv  treatments.csv
trial/: movierag.py  movirag.ipynb
